# DAW1-Rust

./: .gitignore  README.md
1a Etapa/: tutorial.md
2a Etapa/: tutorial.md
3a Etapa/: tutorial.md
4a Etapa/: tutorial.md
5a Etapa/: tutorial.md  tutorial_old.md
6a Etapa/: tutorial.md
7a Etapa/: tutorial.md
exemplo/: Cargo.toml  Rocket.toml
exemplo/paginas/: chaves.html.tera  criar_chave.html.tera  index.html.tera
exemplo/src/: chave.rs  conexao.rs  emprestimo.rs  main.rs  paginas.rs  pessoa_dao.rs  pessoas.rs  servidor.rs
exemplo/src/classes/: chave.rs  servidor.rs
exemplo/src/dao/: chave.rs  emprestimo.rs  mod.rs  servidor.rs
exemplo/src/rotas/: chaves.rs  mod.rs  servidor.rs
exemplos/: Cargo.toml
exemplos/etapa1/: Cargo.toml
exemplos/etapa1/src/: main.rs
exemplos/etapa3/: Cargo.toml
exemplos/etapa3/src/: main.rs
exemplos/etapa4/: Cargo.toml  Rocket.toml
exemplos/etapa4/src/: main.rs
exemplos/etapa5/: Cargo.toml
exemplos/etapa5/src/: conexao.rs
exemplos/etapa5/src/classes/: chave.rs  emprestimo.rs
exemplos/etapa5/src/dao/: chave.rs
exemplos/etapa5/src/rotas/: chaves.rs
exemplos/etapa6/: Cargo.toml
exemplos/etapa6/src/: main.rs
exemplos/etapa6/src/dao/: chave.rs
exemplos/etapa6/src/paginas/: chaves.html.tera
exemplos/etapa6/src/rotas/: chaves.rs
exemplos/etapa7/: Cargo.toml
exemplos/etapa7/src/: enums.rs
exemplos/etapa7/src/classes/: chave.rs
exemplos/etapa7/src/dao/: chave.rs  mod.rs
exemplos/etapa7/src/paginas/: chaves.html.tera  criar_chave.html.tera  editar_chave.html.tera
(+2 files in other folders)
